[package]
name = "lost-cities"
version = "0.1.0"
authors = ["Michael Alexander <beefsack@gmail.com>"]

[dependencies]
brdgme-std = { git = "https://github.com/brdgme/std.git" }
brdgme-game = { git = "https://github.com/brdgme/game.git" }
brdgme-color = { git = "https://github.com/brdgme/color.git" }
brdgme-markup = { git = "https://github.com/brdgme/markup.git" }
brdgme-cmd = { git = "https://github.com/brdgme/cmd.git" }
rand = "*"
combine = "*"
serde = "*"
serde_derive = "*"
