[package]
name = "lost-cities"
version = "0.1.0"
authors = ["Michael Alexander <beefsack@gmail.com>"]

[dependencies]
brdgme-game = { git = "https://github.com/brdgme/game.git" }
brdgme-color = { git = "https://github.com/brdgme/color.git" }
brdgme-markup = { git = "https://github.com/brdgme/markup.git" }
brdgme-cmd = { git = "https://github.com/brdgme/cmd.git" }
rand = "0.3.15"
combine = "2.3.1"
serde = "0.9.13"
serde_derive = "0.9.13"
